Fixed Student Main Page Extra Space Issues

--- a/src/app/section/home/student-main-page/student-main-page.component.css
+++ b/src/app/section/home/student-main-page/student-main-page.component.css
@@ -28,6 +28,7 @@
     left: 480px;
     top: 160px;
     z-index: 2;
+    width: fit-content;
 }
 
 #second_tagline {
@@ -56,6 +57,7 @@
     left: 950px;
     top: 8px;
     z-index: 5;
+    width: fit-content;
 }
 
 #recent_created_quiz {
@@ -64,6 +66,7 @@
     position: relative;
     top: 28px;
     left: 10px;
+    width: fit-content;
 }
 
 #view_more {
@@ -73,6 +76,7 @@
     left: 1350px;
     top: 2px;
     cursor: pointer;
+    width: fit-content;
 }
 
 #power-up-sec {
@@ -104,12 +108,14 @@
     position: relative;
     left: 480px;
     top: 140px;
+    width: fit-content;
 }
 
 #second_power_tagline {
     position: absolute;
     top: 210px;
     left: 550px;
+    width: fit-content;
 }
 
 #highlight_stronger {
@@ -151,6 +157,7 @@
     left: 640px;
     top: 140px;
     z-index: 1;
+    width: fit-content;
 }
 
 #second_title_tagline {
@@ -161,6 +168,7 @@
 
 #highlight_spin {
     color: #1FFFD4;
+    width: fit-content;
 }
 
 #highlight_unique_title {
